Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-14408

Memory leak in QFontEngineS60::addGlyphsToPath()

    XMLWordPrintable

Details

    • 61d23b1740780b3c7970c9dd5d089002a35f339e

    Description

      An "Open"ed RGlyphOutlineIterator needs to be "Close"d before destroying the iterator. Otherwise it does not free allocated memory. The RGlyphOutlineIterator destructor does not close an open iterator.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            portale Alessandro Portale
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes