Fix memory leak in QFontEngineS60::addGlyphsToPath()

An "Open()"ed RGlyphOutlineIterator needs to be "Close()"d
before destroying the iterator. Otherwise some allocated
memory does not get freed. The RGlyphOutlineIterator
destructor does not close an open iterator.

Task-Number: QTBUG-14408
Done-by: Colleague from Nokia, Oulu
Reviewed-by: Alessandro Portale